tests/NormalTests/paczka1/fuzzy1/77067907.err
Error in line 2: A778 A415 14,9
Error in line 9: htHX1 S214 59,9
Error in line 14: 5wAEj8D5k S214 11,2
Error in line 18: A778 A778 19,4
Error in line 15: 5wAEj8D5k A778 71,6
